--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
       <h3>
 <a id="lobster-macarons-beautiful-cakes-and-more" class="anchor" href="#lobster-macarons-beautiful-cakes-and-more" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lobster, Macarons, Beautiful Cakes and More</h3>
 
-<p>We're a team of foodies prepared to cook, bake, and deliver delicious to your next gathering.
-We can grill for the whole backyard (and then some), match macaron flavors to the decor, and assist with logistics on the big day.</p>
+<p>We're a team of foodies prepared to cook, bake, and deliver <em>delicious</em> to your next gathering.<br>
+We can grill for the whole backyard (and then some),<br>
+match macaron flavors to the decor,<br>
+and assist with logistics on the big day.</p>
 
-<p>Let us help with your next event in Orange County!
+<p><strong>Let us help with your next event in Orange County!</strong>
 <a href="mailto:info@orionscookery.com">info@orionscookery.com</a></p>
 
 <p>Follow us on Instagram <a href="https://www.instagram.com/orionscookery/">here: @orionscookery</a></p>
