Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ We can grill for the whole backyard (and then some),<br>
 match macaron flavors to the decor,<br>
 and assist with logistics on the big day.</p>
 
-<p><strong>Let us help with your next event in Orange County!</strong>
+<p><strong>Let us help with your next event in Orange County!</strong><br>
 <a href="mailto:info@orionscookery.com">info@orionscookery.com</a></p>
 
 <p>Follow us on Instagram <a href="https://www.instagram.com/orionscookery/">here: @orionscookery</a></p>
