Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <a id="lobster-macarons-beautiful-cakes-and-more" class="anchor" href="#lobster-macarons-beautiful-cakes-and-more" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lobster, Macarons, Beautiful Cakes and More</h3>
 
 <p>We're a team of foodies prepared to cook, bake, and deliver <em>delicious</em> to your next gathering.<br>
-We can grill for the whole backyard (and then some),<br>
+We can grill for the crowd,<br>
 match macaron flavors to the decor,<br>
 and assist with logistics on the big day.  </p>
 
